src/ExpParser.py
# Generated from Exp.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class ExpParser ( Parser ):

    grammarFileName = "Exp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'method'", "'{'", "':'", "'}'", "'('", 
                     "')'", "';'", "'not'", "'==>'", "'::'", "'\u21A6'", 
                     "'\u2297'", "'part'", "','", "'on'", "'assert'", "'var'", 
                     "':='", "'*='", "'init'", "'measure'", "'measA'", "'break'", 
                     "'then'", "'with'", "'^{-1}'", "'sin'", "'cos'", "'sqrt'", 
                     "'|'", "'\u03C9'", "'omega'", "'rot'", "'ket'", "'['", 
                     "']'", "'dis'", "'->'", "'array'", "'set'", "'Q'", 
                     "'axiom'", "'function'", "'lemma'", "'predicate'", 
                     "'ensures'", "'requires'", "'decreases'", "'separates'", 
                     "'returns'", "'return'", "'forall'", "'nat'", "'real'", 
                     "'int'", "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'^'", "'\u2295'", "'xor'", "'.'", "<INVALID>", 
                     "<INVALID>", "'aa'", "<INVALID>", "'H'", "'QFT'", "'RQFT'", 
                     "'if'", "'else'", "'for'", "'while'", "<INVALID>", 
                     "<INVALID>", "'\u03BB'", "'\u27E9'", "<INVALID>", "<INVALID>", 
                     "'invariant'", "'&&'", "'||'", "'>='", "'<='", "'=='", 
                     "'!='", "'<'", "'>'", "'=>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Axiom", "Function", "Lemma", 
                      "Predicate", "Ensures", "Requires", "Decreases", "Separates", 
                      "Returns", "Return", "Forall", "TNat", "TReal", "TInt", 
                      "TBool", "TBV", "TAdd", "TSub", "TMul", "TDiv", "TMod", 
                      "TExp", "OPlus", "TXor", "TDot", "Nor", "Had", "AA", 
                      "En", "SHad", "SQFT", "RQFT", "If", "Else", "For", 
                      "While", "TrueLiteral", "FalseLiteral", "TCl", "TKet", 
                      "TIn", "TSum", "Invariant", "And", "OR", "GE", "LE", 
                      "EQ", "NE", "LT", "GT", "ARROW", "Number", "ID", "Letter", 
                      "LetterOrDigit", "TInclude", "AT", "ELLIPSIS", "WS", 
                      "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_topLevel = 1
    RULE_method = 2
    RULE_function = 3
    RULE_lemma = 4
    RULE_predicate = 5
    RULE_returna = 6
    RULE_conds = 7
    RULE_reen = 8
    RULE_loopConds = 9
    RULE_stmts = 10
    RULE_stmt = 11
    RULE_spec = 12
    RULE_bexp = 13
    RULE_qbool = 14
    RULE_logicImply = 15
    RULE_allspec = 16
    RULE_logicExpr = 17
    RULE_logicInExpr = 18
    RULE_chainBExp = 19
    RULE_comOp = 20
    RULE_qtypeCreate = 21
    RULE_qunspec = 22
    RULE_qspec = 23
    RULE_partspec = 24
    RULE_partpred = 25
    RULE_partsection = 26
    RULE_partsections = 27
    RULE_tensorall = 28
    RULE_sumspec = 29
    RULE_maySum = 30
    RULE_asserting = 31
    RULE_casting = 32
    RULE_varcreate = 33
    RULE_assigning = 34
    RULE_ids = 35
    RULE_idindices = 36
    RULE_qassign = 37
    RULE_qcreate = 38
    RULE_measure = 39
    RULE_measureAbort = 40
    RULE_returnStmt = 41
    RULE_breakStmt = 42
    RULE_ifexp = 43
    RULE_cifexp = 44
    RULE_manyketpart = 45
    RULE_forexp = 46
    RULE_whileexp = 47
    RULE_fcall = 48
    RULE_arithExprsOrKets = 49
    RULE_arithExprWithSum = 50
    RULE_arithExpr = 51
    RULE_arithAtomic = 52
    RULE_sinExpr = 53
    RULE_cosExpr = 54
    RULE_sqrtExpr = 55
    RULE_notExpr = 56
    RULE_absExpr = 57
    RULE_omegaExpr = 58
    RULE_rotExpr = 59
    RULE_ketCallExpr = 60
    RULE_setInstance = 61
    RULE_memberAccess = 62
    RULE_expr = 63
    RULE_lambdaT = 64
    RULE_dis = 65
    RULE_manyket = 66
    RULE_ket = 67
    RULE_ketsum = 68
    RULE_qstate = 69
    RULE_bindings = 70
    RULE_binding = 71
    RULE_typeOptionalBindings = 72
    RULE_typeOptionalBinding = 73
    RULE_locus = 74
    RULE_crange = 75
    RULE_index = 76
    RULE_idindex = 77
    RULE_qrange = 78
    RULE_numexp = 79
    RULE_typeT = 80
    RULE_baseTy = 81
    RULE_qty = 82
    RULE_aaType = 83
    RULE_additiveOp = 84
    RULE_multiplicativeOp = 85
    RULE_exponentialOp = 86
    RULE_boolLiteral = 87

    ruleNames =  [ "program", "topLevel", "method", "function", "lemma", 
                   "predicate", "returna", "conds", "reen", "loopConds", 
                   "stmts", "stmt", "spec", "bexp", "qbool", "logicImply", 
                   "allspec", "logicExpr", "logicInExpr", "chainBExp", "comOp", 
                   "qtypeCreate", "qunspec", "qspec", "partspec", "partpred", 
                   "partsection", "partsections", "tensorall", "sumspec", 
                   "maySum", "asserting", "casting", "varcreate", "assigning", 
                   "ids", "idindices", "qassign", "qcreate", "measure", 
                   "measureAbort", "returnStmt", "breakStmt", "ifexp", "cifexp", 
                   "manyketpart", "forexp", "whileexp", "fcall", "arithExprsOrKets", 
                   "arithExprWithSum", "arithExpr", "arithAtomic", "sinExpr", 
                   "cosExpr", "sqrtExpr", "notExpr", "absExpr", "omegaExpr", 
                   "rotExpr", "ketCallExpr", "setInstance", "memberAccess", 
                   "expr", "lambdaT", "dis", "manyket", "ket", "ketsum", 
                   "qstate", "bindings", "binding", "typeOptionalBindings", 
                   "typeOptionalBinding", "locus", "crange", "index", "idindex", 
                   "qrange", "numexp", "typeT", "baseTy", "qty", "aaType", 
                   "additiveOp", "multiplicativeOp", "exponentialOp", "boolLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    Axiom=42
    Function=43
    Lemma=44
    Predicate=45
    Ensures=46
    Requires=47
    Decreases=48
    Separates=49
    Returns=50
    Return=51
    Forall=52
    TNat=53
    TReal=54
    TInt=55
    TBool=56
    TBV=57
    TAdd=58
    TSub=59
    TMul=60
    TDiv=61
    TMod=62
    TExp=63
    OPlus=64
    TXor=65
    TDot=66
    Nor=67
    Had=68
    AA=69
    En=70
    SHad=71
    SQFT=72
    RQFT=73
    If=74
    Else=75
    For=76
    While=77
    TrueLiteral=78
    FalseLiteral=79
    TCl=80
    TKet=81
    TIn=82
    TSum=83
    Invariant=84
    And=85
    OR=86
    GE=87
    LE=88
    EQ=89
    NE=90
    LT=91
    GT=92
    ARROW=93
    Number=94
    ID=95
    Letter=96
    LetterOrDigit=97
    TInclude=98
    AT=99
    ELLIPSIS=100
    WS=101
    Comment=102
    Line_Comment=103

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExpParser.EOF, 0)

        def topLevel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.TopLevelContext)
            else:
                return self.getTypedRuleContext(ExpParser.TopLevelContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 176
                self.topLevel()
                self.state = 179 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExpParser.T__0) | (1 << ExpParser.Function) | (1 << ExpParser.Lemma) | (1 << ExpParser.Predicate))) != 0) or _la==ExpParser.TInclude):
                    break

            self.state = 181
            self.match(ExpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopLevelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TInclude(self):
            return self.getToken(ExpParser.TInclude, 0)

        def method(self):
            return self.getTypedRuleContext(ExpParser.MethodContext,0)


        def function(self):
            return self.getTypedRuleContext(ExpParser.FunctionContext,0)


        def lemma(self):
            return self.getTypedRuleContext(ExpParser.LemmaContext,0)


        def predicate(self):
            return self.getTypedRuleContext(ExpParser.PredicateContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_topLevel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevel" ):
                listener.enterTopLevel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevel" ):
                listener.exitTopLevel(self)




    def topLevel(self):

        localctx = ExpParser.TopLevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevel)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExpParser.TInclude]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(ExpParser.TInclude)
                pass
            elif token in [ExpParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.method()
                pass
            elif token in [ExpParser.Function]:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.function()
                pass
            elif token in [ExpParser.Lemma]:
                self.enterOuterAlt(localctx, 4)
                self.state = 186
                self.lemma()
                pass
            elif token in [ExpParser.Predicate]:
                self.enterOuterAlt(localctx, 5)
                self.state = 187
                self.predicate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpParser.ID, 0)

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def conds(self):
            return self.getTypedRuleContext(ExpParser.CondsContext,0)


        def Axiom(self):
            return self.getToken(ExpParser.Axiom, 0)

        def Returns(self):
            return self.getToken(ExpParser.Returns, 0)

        def returna(self):
            return self.getTypedRuleContext(ExpParser.ReturnaContext,0)


        def stmts(self):
            return self.getTypedRuleContext(ExpParser.StmtsContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = ExpParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(ExpParser.T__0)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 191
                self.match(ExpParser.T__1)
                self.state = 192
                self.match(ExpParser.T__2)
                self.state = 193
                self.match(ExpParser.Axiom)
                self.state = 194
                self.match(ExpParser.T__3)


            self.state = 197
            self.match(ExpParser.ID)
            self.state = 198
            self.match(ExpParser.T__4)
            self.state = 199
            self.bindings()
            self.state = 200
            self.match(ExpParser.T__5)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.Returns:
                self.state = 201
                self.match(ExpParser.Returns)
                self.state = 202
                self.returna()


            self.state = 205
            self.conds()
            self.state = 210
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 206
                self.match(ExpParser.T__1)
                self.state = 207
                self.stmts()
                self.state = 208
                self.match(ExpParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Function(self):
            return self.getToken(ExpParser.Function, 0)

        def ID(self):
            return self.getToken(ExpParser.ID, 0)

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def Axiom(self):
            return self.getToken(ExpParser.Axiom, 0)

        def typeT(self):
            return self.getTypedRuleContext(ExpParser.TypeTContext,0)


        def arithExpr(self):
            return self.getTypedRuleContext(ExpParser.ArithExprContext,0)


        def qspec(self):
            return self.getTypedRuleContext(ExpParser.QspecContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = ExpParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 212
            self.match(ExpParser.Function)
            self.state = 217
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 213
                self.match(ExpParser.T__1)
                self.state = 214
                self.match(ExpParser.T__2)
                self.state = 215
                self.match(ExpParser.Axiom)
                self.state = 216
                self.match(ExpParser.T__3)


            self.state = 219
            self.match(ExpParser.ID)
            self.state = 220
            self.match(ExpParser.T__4)
            self.state = 221
            self.bindings()
            self.state = 222
            self.match(ExpParser.T__5)
            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__2:
                self.state = 223
                self.match(ExpParser.T__2)
                self.state = 224
                self.typeT()


            self.state = 234
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 227
                self.match(ExpParser.T__1)
                self.state = 230
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 228
                    self.arithExpr(0)
                    pass

                elif la_ == 2:
                    self.state = 229
                    self.qspec()
                    pass


                self.state = 232
                self.match(ExpParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LemmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lemma(self):
            return self.getToken(ExpParser.Lemma, 0)

        def ID(self):
            return self.getToken(ExpParser.ID, 0)

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def conds(self):
            return self.getTypedRuleContext(ExpParser.CondsContext,0)


        def Axiom(self):
            return self.getToken(ExpParser.Axiom, 0)

        def getRuleIndex(self):
            return ExpParser.RULE_lemma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLemma" ):
                listener.enterLemma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLemma" ):
                listener.exitLemma(self)




    def lemma(self):

        localctx = ExpParser.LemmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lemma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 236
            self.match(ExpParser.Lemma)
            self.state = 241
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 237
                self.match(ExpParser.T__1)
                self.state = 238
                self.match(ExpParser.T__2)
                self.state = 239
                self.match(ExpParser.Axiom)
                self.state = 240
                self.match(ExpParser.T__3)


            self.state = 243
            self.match(ExpParser.ID)
            self.state = 244
            self.match(ExpParser.T__4)
            self.state = 245
            self.bindings()
            self.state = 246
            self.match(ExpParser.T__5)
            self.state = 247
            self.conds()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Predicate(self):
            return self.getToken(ExpParser.Predicate, 0)

        def ID(self):
            return self.getToken(ExpParser.ID, 0)

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def qspec(self):
            return self.getTypedRuleContext(ExpParser.QspecContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):
